<resources>
    <string name="app_name">TrabajoUniversidad</string>
    <string name="nombre_app">App Movil ADN Tecnologia</string>
    <string name="version">Version 1.0</string>
    <string name="Desarrollador">Desarrollado por Andrés Clavijo Bernal</string>

    <!--Controles generales -->
    <string name="nuevo">Nuevo</string>
    <string name="editar">Editar</string>
    <string name="actualizar">actualizar</string>
    <string name="eliminar">eliminar</string>

    <!--Login -->
    <string name="titulologin">Login de Acceso</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="olvidaste_contra">Olvidaste tu contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_cuenta">No tienes cuenta,Registrate</string>
    <string name="ayuda">Ayuda?</string>
    <string name="registrar">Registrese</string>


    <!--Registro -->
    <string name="titulo_registro">Registro Usuarios</string>
    <string name="ingrese_datos">Ingrese Datos</string>
    <string name="nombre">Nombre</string>
    <string name="ingrese_nombre">Ingrese Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="ingrese_apellido">Ingrese Apellido</string>
    <string name="correo">Correo Electronico</string>
    <string name="ingrese_correo">Ingrese Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingrese_contrasena">Ingrese Contraseña</string>
    <string name="registrarse">Registrar</string>
    <string name="ir_login">Ir a Login</string>


</resources>