<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Registrar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_registro"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/ivRegistro"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/registro"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@drawable/bg_white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingrese_datos"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/etNombreR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_nombre"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/etApellidoR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_apellido"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/etCorreoR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_correo"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasena"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/etContrasenaR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_contrasena"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        
        <Button
            android:id="@+id/btnResgistrarU"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/registrarse"
            android:backgroundTint="@color/black"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvirLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ir_login"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="100dp"
            android:gravity="center"/>


    </LinearLayout>

</ScrollView>