<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulologin"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@+id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="30dp"
     android:layout_marginEnd="30dp"
     android:layout_below="@id/tvTitulo"
     android:layout_marginTop="10dp">
     
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/usuario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp">

             <EditText
                 android:id="@+id/etUsuario"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/usuario"
                 android:inputType="textEmailAddress"
                 />

         </com.google.android.material.textfield.TextInputLayout>


         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/clave"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/usuario"
             android:layout_marginTop="15dp"
             app:passwordToggleEnabled="true"
             >

             <EditText
                 android:id="@+id/etclave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/clave"
                 android:inputType="textPassword"
                 />
         </com.google.android.material.textfield.TextInputLayout>


         <TextView
             android:id="@+id/olvidaste"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/clave"
             android:text="@string/olvidaste_contra"
             android:textStyle="bold"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="15dp"
              />
         
         <Button
             android:id="@+id/btningresar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@id/olvidaste"
             android:layout_marginTop="15dp"
             android:text="@string/ingresar"
             android:backgroundTint="@color/red"
             />
         
         <Button
             android:id="@+id/btnregistrar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@+id/btningresar"
             android:layout_marginTop="15dp"
             android:backgroundTint="@color/black"
             android:text="@string/registrar"/>


        <TextView
            android:id="@+id/tvregistrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ayuda"
            android:layout_below="@+id/btnregistrar"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            />


     </RelativeLayout>

 </ScrollView>


</RelativeLayout>